[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/titulo.png" type="Texture" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 529, 172.253 )
scale = Vector2( 1, 0.48 )
texture = ExtResource( 2 )

[node name="Start" type="Button" parent="."]
margin_left = 418.741
margin_top = 296.073
margin_right = 618.741
margin_bottom = 346.073
text = "INICIAR"

[node name="Help" type="Button" parent="."]
margin_left = 418.741
margin_top = 389.424
margin_right = 618.741
margin_bottom = 439.424
text = "COMO JOGAR"

[node name="Close" type="Button" parent="."]
margin_left = 418.741
margin_top = 480.325
margin_right = 618.741
margin_bottom = 530.325
text = "SAIR"

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 195.0
margin_top = 213.0
margin_right = 878.0
margin_bottom = 552.0

[node name="TextEdit" type="TextEdit" parent="Panel"]
margin_left = 83.3604
margin_top = 70.766
margin_right = 599.36
margin_bottom = 120.766
text = "Jogo \"click and point\"
Jogador deve encontrar os objetos interativos para dar continuidade no jogo."
readonly = true
breakpoint_gutter = true

[node name="Button" type="Button" parent="Panel"]
margin_left = 235.802
margin_top = 220.009
margin_right = 426.802
margin_bottom = 256.009
text = "CLOSE"
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
